kubernetes/virtual-services/virtual-service1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
    - "bookinfo.app"
  gateways:
    - bookinfo-gateway
  http:
    - match:
        - uri:
          exact: /productpage
        - uri:
          exact: /static
        - uri:
          exact: /login
        - uri:
          exact: /logout
        - uri:
          exact: /api/v1/products
  route:
    - destination:
      host: productpage
      port:
        number: 9080
